<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewMain"
        android:layout_width="313dp"
        android:layout_height="54dp"
        android:padding="4dp"
        android:text="@string/lab1Activity"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.076" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="42dp"
        android:layout_height="27dp"
        android:layout_marginTop="44dp"
        android:text="@string/formName"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMain" />

    <EditText
        android:id="@+id/name"
        android:layout_width="283dp"
        android:layout_height="49dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="28dp"
        android:hint="@string/fromNameHint"
        android:inputType="text"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/textView1"
        app:layout_constraintTop_toBottomOf="@+id/textViewMain" />

    <EditText
        android:id="@+id/grades"
        android:layout_width="218dp"
        android:layout_height="48dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="36dp"
        android:hint="@string/fromGradesAmountHint"
        android:inputType="number"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/surname" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="86dp"
        android:layout_height="31dp"
        android:layout_marginTop="88dp"
        android:text="@string/formSurname"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView1"
        app:layout_constraintTop_toTopOf="@+id/textView1" />

    <EditText
        android:id="@+id/surname"
        android:layout_width="247dp"
        android:layout_height="50dp"

        android:layout_marginStart="4dp"
        android:layout_marginTop="44dp"
        android:hint="@string/formSurnameHint"
        android:inputType="text"
        android:textSize="13sp"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="114dp"
        android:layout_height="33dp"
        android:layout_marginTop="76dp"
        android:text="@string/formGradesAmount"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <Button
        android:id="@+id/gradesButton"
        android:layout_width="208dp"
        android:layout_height="67dp"
        android:layout_marginEnd="4dp"
        android:text="@string/gradesBigCap"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.718"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.559" />


</androidx.constraintlayout.widget.ConstraintLayout>